# forml

./: .gitignore  .travis.yml  LICENSE  Parsec.html  Prelude.html  README.markdown  Setup.hs  TETЯIS.html  build.sh  compile.sh  deps.sh  footer.html  formal.cabal  forml.cabal  header.html  index.html  params.json  parsec.html  prelude.html  prelude.js  prelude.sonnet  prelude.spec.js  publish_gh.sh  sample.js  sonnet.cabal  test.html  tests.html  tetris.html  watch.sh
lib/: base.css  default.css
lib/css/: prettify.css
lib/js/: coda.css  console.js  lang-hs.js  prettify.css
lib/js/jasmine-1.0.1/: jasmine-html.js  jasmine.css  jasmine.js
src/: Sonnet.hs
src/css/: styles.css
src/formal/: formalz.formal  parsec.formal  prelude.formal  readme.formal  tests.formal
src/forml/: formalz.forml  parsec.forml  prelude.forml  readme.forml  server.forml  tests.forml  tetris.forml
src/hs/: Formal.hs  Main.hs  Sonnet.hs  Sonnet.lhs
src/hs/Formal/: CLI.hs  Closure.hs  Javascript.hs  Optimize.hs  Parser.hs  TypeCheck.hs
src/hs/Formal/Javascript/: Backend.hs  Utils.hs
src/hs/Formal/Parser/: AST.hs  Statements.hs  Types.hs  Utils.hs
src/hs/Formal/TypeCheck/: Types.hs
src/hs/Formal/Types/: Axiom.hs  Definition.hs  Expression.hs  Literal.hs  Namespace.hs  Pattern.hs  Statement.hs  Symbol.hs  Type.hs  TypeDefinition.hs
src/hs/Forml/: CLI.hs  Closure.hs  Deps.hs  Doc.hs  Javascript.hs  Optimize.hs  Parser.hs  Static.hs  TypeCheck.hs
src/hs/Forml/Javascript/: Backend.hs  Test.hs
src/hs/Forml/Optimize/: Inline.hs  TailCall.hs
src/hs/Forml/Parser/: Utils.hs
src/hs/Forml/TypeCheck/: Types.hs  Unify.hs
src/hs/Forml/Types/: Axiom.hs  Definition.hs  Expression.hs  Literal.hs  Namespace.hs  Pattern.hs  Statement.hs  Symbol.hs  Type.hs  TypeDefinition.hs
src/hs/Sonnet/: AST.hs  Javascript.hs  Parser.hs  TypeCheck.hs  Util.hs
src/hs/Sonnet/Parser/: AST.hs  Statements.hs  Types.hs  Utils.hs
src/hs/lib/Forml/: CLI.hs  Closure.hs  Doc.hs  Exec.hs  Javascript.hs  Optimize.hs  Parser.hs  Static.hs  TypeCheck.hs
src/hs/lib/Forml/Javascript/: Test.hs  Utils.hs
src/hs/lib/Forml/Optimize/: Inline.hs  Optimizer.hs  TailCall.hs
src/hs/lib/Forml/Parser/: Utils.hs
src/hs/lib/Forml/TypeCheck/: Types.hs
src/hs/lib/Forml/Types/: Axiom.hs  Definition.hs  Expression.hs  Namespace.hs  Pattern.hs  Statement.hs  Symbol.hs  TypeDefinition.hs
src/hs/main/: Main.hs
src/hs/test/: MainSpec.hs
src/hs/test/Forml/: CLISpec.hs
src/html/: footer.html  header.html  styles.css  template.html
src/js/: FormalReporter.js  FormlReporter.js  table_of_contents.js
src/sonnet/: prelude.formal  prelude.sonnet  test.sonnet  test2.sonnet
stylesheets/: styles.css
tmp/: tests.html
