Name:                formal
Version:             0.1
Synopsis:            A statically typed, functional & event driven language targetting the browser 
License:             AllRightsReserved
Author:              Andrew Stein
Maintainer:          steinlink@gmail.com
Stability:           Experimental
Category:            Compiler
Build-type:          Simple
Cabal-version:       >=1.2

Executable formal
  hs-source-dirs: src/hs
  main-is: Formal.hs

  Build-depends:
    base, 
    bytestring >= 0.9.1 && <0.10,
    template-haskell == 2.7.0.0,
    parsec,
    indents,
    containers,
    pandoc,
    jmacro == 0.6.1,
    MissingH,
    interpolatedstring-perl6,
    transformers,
    mtl,
    text,
    wl-pprint-text,
    ansi-terminal,
    HTTP,
    network,
    urlencoded,
    file-embed,
    process,
    directory
 
  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -cpp -threaded
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
