Name:                formal
Version:             0.1.0
Synopsis:            A statically typed, functional programming language 
License:             MIT
Author:              Andrew Stein
Maintainer:          steinlink@gmail.com
Stability:           Experimental
Category:            Compiler
Build-type:          Simple
Cabal-version:       >=1.4
data-files:          
                     lib/jasmine-node/bin/jasmine-node, 
                     lib/jasmine-node/lib/jasmine-node/async-callback.js, 
                     lib/jasmine-node/lib/jasmine-node/autotest.js, 
                     lib/jasmine-node/lib/jasmine-node/cli.js, 
                     lib/jasmine-node/lib/jasmine-node/index.js, 
                     lib/jasmine-node/lib/jasmine-node/jasmine-2.0.0.rc1.js, 
                     lib/jasmine-node/lib/jasmine-node/reporter.js, 
                     lib/jasmine-node/lib/jasmine-node/requirejs-runner.js, 
                     lib/jasmine-node/lib/jasmine-node/requirejs-spec-loader.js, 
                     lib/jasmine-node/lib/jasmine-node/requirejs-wrapper-template.js, 
                     lib/jasmine-node/lib/jasmine-node/spec-collection.js, 
                     lib/jasmine-node/scripts/specs, 
                     lib/jasmine-node/spec/nested/uber-nested/UberNestedSpec.js, 
                     lib/jasmine-node/spec/nested/NestedSpec.js, 
                     lib/jasmine-node/spec/nested.js/NestedSpec.js, 
                     lib/jasmine-node/spec/async-callback_spec.js, 
                     lib/jasmine-node/spec/AsyncSpec.coffee, 
                     lib/jasmine-node/spec/CoffeeSpec.coffee, 
                     lib/jasmine-node/spec/GrammarHelper.coffee, 
                     lib/jasmine-node/spec/helper_spec.js, 
                     lib/jasmine-node/spec/HelperSpec.coffee, 
                     lib/jasmine-node/spec/reporter_spec.js, 
                     lib/jasmine-node/spec/sample_helper.js, 
                     lib/jasmine-node/spec/SampleSpecs.js, 
                     lib/jasmine-node/spec/TestSpec.js, 
                     lib/jasmine-node/spec-requirejs/requirejs.spec.js, 
                     lib/jasmine-node/spec-requirejs/requirejs.sut.js, 
                     lib/jasmine-node/LICENSE, 
                     lib/jasmine-node/package.json, 
                     lib/jasmine-node/README.md, 
                     lib/jasmine-node/specs.sh, 
                     lib/js/jasmine-1.0.1/jasmine-html.js, 
                     lib/js/jasmine-1.0.1/jasmine.css, 
                     lib/js/jasmine-1.0.1/jasmine.js, 
                     lib/js/jasmine-1.0.1/MIT.LICENSE, 
                     lib/js/coda.css, 
                     lib/js/console.js, 
                     lib/js/jquery.js, 
                     lib/js/lang-hs.js, 
                     lib/js/prettify.css, 
                     lib/js/prettify.js, 
                     lib/js/underscore.js, 
                     lib/js/zepto.js, 
                     lib/base.css, 
                     lib/default.css, 
                     lib/layout.css, 
                     lib/skeleton.css, 
                     src/formal/bug.formal, 
                     src/formal/bugb.formal, 
                     src/formal/formalz.formal, 
                     src/formal/parsec.formal, 
                     src/formal/prelude.formal, 
                     src/formal/prelude.html, 
                     src/formal/prelude.js, 
                     src/formal/prelude.spec.js, 
                     src/formal/temp.js, 
                     src/formal/tests.formal, 
                     src/formal/underscore.formal, 
                     src/html/footer.html, 
                     src/html/header.html, 
                     src/js/FormalReporter.js, 
                     src/js/table_of_contents.js, 
                     LICENSE

Executable formal
  hs-source-dirs: src/hs
  main-is: Main.hs

  Build-depends:
    base >= 4 && <= 5, 
    bytestring >= 0.9.1 && <0.10,
    parsec,
    indents,
    containers,
    pandoc,
    jmacro,
    MissingH,
    interpolatedstring-perl6,
    transformers,
    mtl,
    text,
    wl-pprint-text,
    ansi-terminal,
    HTTP,
    network,
    urlencoded,
    file-embed,
    process,
    directory
 
  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -threaded
                 -funfolding-use-threshold=16 -fexcess-precision
                 -optc-O3 -optc-ffast-math
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
  other-modules:  
                  Formal.Javascript,
                  Formal.Javascript.Backend,
                  Formal.Javascript.Utils,
                  Formal.Optimize,
                  Formal.Parser,
                  Formal.Parser.Utils,
                  Formal.TypeCheck,
                  Formal.TypeCheck.Types,
                  Formal.Types.Axiom,
                  Formal.Types.Definition,
                  Formal.Types.Expression,
                  Formal.Types.Literal,
                  Formal.Types.Namespace,
                  Formal.Types.Pattern,
                  Formal.Types.Statement,
                  Formal.Types.Symbol,
                  Formal.Types.Type,
                  Formal.Types.TypeDefinition,
                  Formal.Closure,
                  Formal.CLI
