Name:                forml
Version:             0.2
Synopsis:            A statically typed, functional programming language 
License:             MIT
Author:              Andrew Stein
Maintainer:          steinlink@gmail.com
Stability:           Experimental
Category:            Compiler
Build-type:          Simple
Cabal-version:       >=1.4
data-files:          
                     lib/js/jasmine-1.0.1/jasmine-html.js, 
                     lib/js/jasmine-1.0.1/jasmine.css, 
                     lib/js/jasmine-1.0.1/jasmine.js, 
                     lib/js/coda.css, 
                     lib/js/jquery.js, 
                     lib/js/lang-hs.js, 
                     lib/js/prettify.css, 
                     lib/js/prettify.js, 
                     src/forml/parsec.forml, 
                     src/forml/prelude.forml, 
                     src/forml/tests.forml, 
                     src/forml/readme.forml, 
                     src/html/footer.html, 
                     src/html/header.html, 
                     src/html/styles.css,
                     src/js/FormlReporter.js
homepage:            http://texodus.github.com/forml


Executable forml
  hs-source-dirs: src/hs
  main-is: Main.hs

  Build-depends:
    base >= 4 && <= 5, 
    bytestring >= 0.9.1 && <0.10,
    parsec,
    indents == 0.3.3,
    containers == 0.4.2.1,
    GraphSCC == 1.0.2,
    pandoc,
    jmacro == 0.6.3,
    MissingH,
    interpolatedstring-perl6,
    mtl,
    text,
    ansi-terminal,
    HTTP,
    network,
    urlencoded,
    file-embed,
    process,
    directory,
    utf8-string == 0.3.7,
    ghc-prim,
    cereal == 0.3.5.2,
    zlib == 0.5.4.0,
    hslogger == 1.2.1

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -threaded
                 -funfolding-use-threshold=16 -fexcess-precision
                 -optc-O3 -optc-ffast-math
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  other-modules:  
                  Forml.Javascript,
                  Forml.Javascript.Backend,
                  Forml.Javascript.Utils,
                  Forml.Optimize,
                  Forml.Parser,
                  Forml.Parser.Utils,
                  Forml.TypeCheck,
                  Forml.TypeCheck.Types,
                  Forml.Types.Axiom,
                  Forml.Types.Definition,
                  Forml.Types.Expression,
                  Forml.Types.Literal,
                  Forml.Types.Namespace,
                  Forml.Types.Pattern,
                  Forml.Types.Statement,
                  Forml.Types.Symbol,
                  Forml.Types.Type,
                  Forml.Types.TypeDefinition,
                  Forml.Closure,
                  Forml.CLI,
                  Forml.Doc,
                  Forml.Static,
                  Forml.Javascript.Test
