Name:          forml
Version:       0.2
Synopsis:      A statically typed, functional programming language 
License:       MIT
Author:        Andrew Stein
Maintainer:    steinlink@gmail.com
Stability:     Experimental
Category:      Compiler
Build-type:    Simple
Cabal-version: >=1.8
data-files:          
  lib/css/jasmine.css, 
  lib/css/prettify.css, 
  lib/css/coda.css, 
  lib/js/jasmine-1.0.1/jasmine-html.js, 
  lib/js/jasmine-1.0.1/jasmine.js, 
  lib/js/jquery.js, 
  lib/js/lang-hs.js, 
  lib/js/prettify.js, 
  src/forml/parsec.forml, 
  src/forml/prelude.forml, 
  src/forml/tests.forml, 
  src/forml/readme.forml, 
  src/css/styles.css
  src/html/template.html, 
  src/js/FormlReporter.js
homepage: http://texodus.github.com/forml

Library
  hs-source-dirs: src/hs/lib
  Build-depends:
    base >= 4 && <= 5, 
    parsec,
    indents == 0.3.3,
    GraphSCC >= 1.0.2 && <1.1,
    sundown == 0.5.0.1,
    jmacro >= 0.6.3 && <0.7,
    transformers >= 0.3 && <0.4,
    MissingH,
    interpolatedstring-perl6,
    mtl,
    text,
    ansi-terminal,
    HTTP,
    network,
    urlencoded,
    file-embed,
    process,
    directory,
    utf8-string >= 0.3.7 && <0.4,
    ghc-prim,
    zlib >= 0.5.4.0 && <0.6,
    cereal >= 0.3.5.2 && <0.4,
    hslogger >= 1.2.1 && <1.3,
    HStringTemplate == 0.6.12
  -- latest haskell platform, or modern
  if impl(ghc <= 7.4.2)
    Build-depends:
      bytestring >= 0.9.1 && <0.10,
      containers >= 0.4.2.1 && <0.5
  else
    Build-depends:
      bytestring >= 0.10.0 && <0.11,
      containers >= 0.5.0.0 && <0.6

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -threaded
                 -funfolding-use-threshold=16 -fexcess-precision
                 -optc-O3 -optc-ffast-math
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

  exposed-modules:  
    Forml.Javascript,
    Forml.Javascript.Backend,
    Forml.Javascript.Utils,
    Forml.Optimize,
    Forml.Optimize.Optimizer,
    Forml.Optimize.Inline,
    Forml.Optimize.TailCall,
    Forml.Parser,
    Forml.Parser.Utils,
    Forml.TypeCheck,
    Forml.TypeCheck.Types,
    Forml.Types.Axiom,
    Forml.Types.Definition,
    Forml.Types.Expression,
    Forml.Types.Literal,
    Forml.Types.Namespace,
    Forml.Types.Pattern,
    Forml.Types.Statement,
    Forml.Types.Symbol,
    Forml.Types.Type,
    Forml.Types.TypeDefinition,
    Forml.Closure,
    Forml.CLI,
    Forml.Doc,
    Forml.Deps,
    Forml.Static,
    Forml.Javascript.Test,
    Forml.Exec

Executable forml
  hs-source-dirs: src/hs/main
  main-is: Main.hs

  Build-depends:
    forml,
    base >= 4 && <= 5

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -threaded
                 -funfolding-use-threshold=16 -fexcess-precision
                 -optc-O3 -optc-ffast-math
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       src/hs/test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec >= 1.3
                      , silently >= 1.2.0.2 && <1.3
                      , QuickCheck
                      , HUnit
                      , forml
  if impl(ghc <= 7.4.2)
    Build-Depends:      bytestring >= 0.9.1 && <0.10
  else
    Build-Depends:      bytestring >= 0.10.0 && <0.11
