Name:                sonnet
Version:             0.1
Synopsis:            A statically typed, functional & event driven language targetting the browser 
License:             AllRightsReserved
Author:              Andrew Stein
Maintainer:          steinlink@gmail.com
Stability:           Experimental
Category:            Compiler
Build-type:          Simple
Cabal-version:       >=1.2

Executable sonnet
  hs-source-dirs: src/hs
  main-is: Sonnet.hs

  Build-depends:
    base >= 4,
    haskell98,
    monads-fd >= 0.1 && <0.2,
    bytestring >= 0.9.1 && <0.10,
    template-haskell == 2.5.0.0,
    parsec,
    indents,
    containers,
    pandoc,
    jmacro,
    MissingH
 
  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -cpp -threaded
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
